--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -29,7 +29,7 @@
               = nav_to 'Pacientes Especiales', special_patients_path
               = nav_to 'Medicinas', medicines_path
               = nav_to 'Enfermedades', diseases_path
-              - if current_user.admin?
+              - if current_user.admin_or_super_admin?
                 = nav_to 'Usuarios', admin_users_path
                 = nav_to 'Preferencias', settings_path
               = yield :nav_option
