Improve patients screen
- Push patients with empty names to the end of the result set
- Add icon to navbar brand

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -17,7 +17,9 @@
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          %a.navbar-brand(href="/") Hippocrates
+          %a.navbar-brand(href="/")
+            %i.fa.fa-user-md
+            Hippocrates
           %button.navbar-toggle(type="button"){ data: { toggle: "collapse", target: "#navbar-main" } }
             %span.icon-bar
             %span.icon-bar
