Restrict patient export to admins

--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -8,10 +8,11 @@
 
 .row
   .col-md-12.text-right
-    = link_to t('patients.button.export'),
-      export_patients_path,
-      class: "btn btn-primary",
-      data: { turbolinks: false }
+    - if current_user.admin_or_super_admin?
+      = link_to t('patients.button.export'),
+        export_patients_path,
+        class: "btn btn-primary",
+        data: { turbolinks: false }
 
     = link_to t('patients.button.new'),
       new_patient_path,
