Update nav header for small screens

--- a/app/views/consultations/_hint.haml
+++ b/app/views/consultations/_hint.haml
@@ -124,18 +124,18 @@
         .row
           .col-xs-1
             %span.text-success
-              %i.fa.fa-circle-o
+              %i.far.fa-circle
           .col-xs-10#temperature
             #{@consultation.temperature} °C
         .row
           .col-xs-1
             %span.text-primary
-              %i.fa.fa-circle-o
+              %i.far.fa-circle
           .col-xs-10#blood_pressure
             #{@consultation.blood_pressure} mmHg
         .row
           .col-xs-1
             %span
-              %i.fa.fa-circle-o
+              %i.far.fa-circle
           .col-xs-10#weight
             #{@consultation.weight} Kg
