--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -1,4 +1,4 @@
-= render partial: 'search', locals: { path: patients_path, placeholder: 'Nombres y Apellidos' }
+= render partial: 'search', locals: { path: patients_path, placeholder: 'Nombres o cédula' }
 
 .row
   .col-md-12.text-right
