--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -30,7 +30,7 @@
                 %i.fa.fa-circle
             - else
               %span.text-success
-                %i.fa.fa-circle-o
+                %i.far.fa-circle
           %td.text-center
             - if user.super_admin?
               %span.text-warning
@@ -41,7 +41,7 @@
                   %i.fa.fa-circle
               - else
                 %span.text-warning
-                  %i.fa.fa-circle-o
+                  %i.far.fa-circle
           %td.text-right
             = link_to t('diseases.actions.edit'), edit_admin_user_path(user), class: 'btn btn-primary btn-sm'
 
