--- a/app/views/application/_patient.haml
+++ b/app/views/application/_patient.haml
@@ -46,7 +46,7 @@
         .form-group.col-md-3
           .input-group
             %span.input-group-addon.input-sm Fuente
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.source }
+            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.source_es }
 
       .row-fluid
         .form-group.col-md-6
@@ -62,7 +62,7 @@
         .form-group.col-md-2
           .input-group
             %span.input-group-addon.input-sm Sexo
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.gender }
+            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.gender_es }
         .form-group.col-md-2
           .input-group
             %span.input-group-addon.input-sm Edad
@@ -70,7 +70,7 @@
         .form-group.col-md-4
           .input-group
             %span.input-group-addon.input-sm Estado Civil
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.civil_status }
+            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.civil_status_es }
         .form-group.col-md-4
           .input-group
             %span.input-group-addon.input-sm Ocupación
