--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,7 +18,7 @@
       .container
         .navbar-header
           %a.navbar-brand(href="/")
-            %i.fa.fa-user-md
+            %i.fa.fa-star-of-life
             Hippocrates
           %button.navbar-toggle(type="button"){ data: { toggle: "collapse", target: "#navbar-main" } }
             %span.icon-bar
