Update consultations modal

--- a/app/views/consultations/_modal_consultation.haml
+++ b/app/views/consultations/_modal_consultation.haml
@@ -47,9 +47,9 @@
   {{/hasNextAppointment}}
   .row.consultation-reason
     .col-md-3
-      %strong Motivo de consulta:
+      %strong Enfermedad:
     .col-md-9
-      {{reason}}
+      {{ongoing_issue}}
   %br
 
   {{#hasDiagnoses}}
