--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,6 +10,7 @@
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css'
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css'
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css'
+    = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.min.css'
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css'
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
@@ -39,6 +40,7 @@
                     %span.caret
                   %ul.dropdown-menu{ role: "menu" }
                     = nav_to 'Usuarios', admin_users_path
+                    = nav_to 'Actividades', admin_activities_path
                     = nav_to 'Preferencias', settings_path
               = yield :nav_option
 
@@ -62,6 +64,7 @@
     = javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', 'data-turbolinks-eval': false
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/locales/bootstrap-datepicker.es.min.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.4.1/jquery.autocomplete.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js'
